thien_nguyen_api_update_kid_profile, verify,package
