# server.js
@@ -7,12 +7,8 @@ const { default: axios } = require("axios");
 const cloudinary = require("./config/cloundinary");
 const { CloudinaryStorage } = require("multer-storage-cloudinary");
 const multer = require("multer");
-const swaggerUi = require('swagger-ui-express')
-const swaggerDocument = require('./swagger_output.json')
-require("./passport");
 
 const app = express();
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 const storage = new CloudinaryStorage({
   cloudinary: cloudinary,
   folder: "MYSTERYBOX",
@@ -59,7 +55,7 @@ app.post("/payment", async (req, res) => {
   var orderInfo = "pay with MoMo";
   var partnerCode = "MOMO";
   var redirectUrl = "https://webhook.site/b3088a6a-2d17-4f8d-a383-71389a6c600b";
-  var ipnUrl = "https://webhook.site/b3088a6a-2d17-4f8d-a383-71389a6c600b";
+  var ipnUrl = "https://mysterybox-swd-be.onrender.com/callback";
   var requestType = "payWithMethod";
   var amount = "50000";
   var orderId = partnerCode + new Date().getTime();
@@ -145,7 +141,39 @@ app.post("/payment", async (req, res) => {
   }
 });
 
-// app.post("/callback", async (req, res) => {});
+app.post("/callback", async (req, res) => {
+  console.log(req.body);
+  //update status order
+  return res.json(req.body);
+});
+
+app.post("/transaction-status", async (req, res) => {
+  const { orderId } = req.body;
+  var accessKey = "F8BBA842ECF85";
+  var secretKey = "K951B6PE1waDMi640xX08PD3vg6EkVlz";
+  const rawSignature = `accessKey=${accessKey}&orderId=${orderId}&partnerCode=MOMO&requestId=${orderId}`;
+  const signature = crypto
+    .createHmac("sha256", secretKey)
+    .update(rawSignature)
+    .digest("hex");
+  const requestBody = JSON.stringify({
+    partnerCode: "MOMO",
+    requestId: orderId,
+    orderId,
+    signature,
+    lang: "vi",
+  });
+  const options = {
+    method: "POST",
+    url: "https://test-payment.momo.vn/v2/gateway/api/query",
+    headers: {
+      "Content-Type": "application/json",
+    },
+    data: requestBody,
+  };
+  let result = await axios(options);
+  return res.json(result.data);
+});
 app.listen(8080, () => {
   console.log("Server is running port 8080");
 });
